# xlsxpress

./: pyproject.toml
scripts/: build_app.py
src/xlsxpress/: __init__.py  __main__.py  cli.py
src/xlsxpress/app/: appdata.py  cleanup.py  config.py  context_menu.py  installation.py  main.py
src/xlsxpress/app/gui/: dialog.py  launcher.py
src/xlsxpress/core/: excel.py  options.py  paths.py  pipeline.py  readers.py  writers.py
