[project]
name = "xlsxpress"
version = "0.2.1"
description = "Open tabular files (csv, tsv, txt, parquet) as safely formatted Excel files."
readme = "README.md"
authors = [
    { name = "David M. Hollenstein", email = "hollenstein.david@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "polars>=1.0",
    "xlsxwriter>=3.2",
    "typer>=0.15",
    "platformdirs>=4.0",
    "customtkinter>=5.2",]

[project.scripts]
xlsxpress = "xlsxpress.cli:app"
xlsxpress-app = "xlsxpress.app.main:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

